# xwing

./: .gitignore  LICENSE  README.md  ldapgate.yaml  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
nostromo/: app.py  cli.py  config.py  files.py  upload.py  webdav.py
nostromo/static/: app.js  codemirror-bundle.js  editor.js  style.css
nostromo/templates/: editor.html  index.html
scripts/: build-frontend.mjs  bundle-editor.mjs  package.json  playwright.config.ts
scripts/e2e/: users.yaml  xwing.spec.ts
scripts/e2e/fixtures/: README.md
scripts/e2e/fixtures/releases/: checksums.txt
scripts/tests/: contracts.test.ts  dialog-keyboard.test.js  frontend.test.js  selection.test.ts  sort.test.ts  upload-manager.test.ts  upload-summary.test.ts
tests/: conftest.py  test_app.py  test_audit_store.py  test_config.py  test_files.py  test_upload.py
xwing/: app.py  audit_store.py  auth.py  cli.py  config.py  files.py  upload.py  webdav.py
xwing/frontend/src/: app-core.js  app.js  app.tsx  editor.js  editor.tsx  keyboard.ts  selection.ts  shared.js  sort.ts  style.css  types.ts  upload-manager.ts  upload-summary.ts
xwing/static/: app.js  codemirror-bundle.js  editor.js  style.css
xwing/static/assets/: app.js  editor.js  style.css
xwing/templates/: editor.html  index.html  login.html
