[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xwing"
version = "0.2.1"
description = "File sharing server with WebDAV support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Anudeep Dhavaleswarapu", email = "anudeepd2@gmail.com"}]
keywords = ["webdav", "fileserver", "upload", "sftp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anyio>=4.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.28.1",
]
ldap = ["ldapgate"]

[project.urls]
Homepage = "https://github.com/anudeepd/xwing"
Repository = "https://github.com/anudeepd/xwing"
Issues = "https://github.com/anudeepd/xwing/issues"

[project.scripts]
xwing = "xwing.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xwing*"]

[tool.setuptools.package-data]
xwing = ["static/**/*", "static/*", "templates/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
